--- a/.travis.yml
+++ b/.travis.yml
@@ -20,10 +20,10 @@ matrix:
 
 install:
 - docker pull ibmcom/db2:latest
-- docker run --name db2  -p 50000:50000 -e DB2INST1_PASSWORD=password -e LICENSE=accept -d ibmcom/db2:latest db2start
+- docker run -itd --name db2 --privileged=true -p 50000:50000 -e DB2INST1_PASSWORD=password -e LICENSE=accept -e DBNAME=sample ibmcom/db2
 - docker ps -as
 - docker exec -it db2 useradd -ms /bin/bash auth_user -p auth_pass
-- docker exec -it db2 su - db2inst1 -c "db2 create db sample"
+- docker exec -it db2 su - db2inst1 -c "db2 list db directory"
 
 script:
 - cd IBM_DB/ibm_db
